--- a/app/src/main/res/layout/activity_12.xml
+++ b/app/src/main/res/layout/activity_12.xml
@@ -9,6 +9,28 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.hhu.acd.touching.Activity_12">
+    
+     <android.support.v7.widget.Toolbar
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/colorPrimary"
+        android:fitsSystemWindows="true"
+        app:contentInsetStart="0dp">
+
+        <Button
+            android:id="@+id/B_before"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_navigate_before_white_24dp"
+            android:background="@null"
+            android:text="返回"
+            android:textSize="20sp"
+            android:textColor="#FFFFFF"
+            android:gravity="center_vertical" />
+    </android.support.v7.widget.Toolbar>
+    
     <RelativeLayout
         android:id="@+id/RL"
         android:layout_width="match_parent"
@@ -24,34 +46,55 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="60dp" />
 
-        <TextView
+         <TextView
             android:id="@+id/account"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
-            android:text="账号：123456789"
+            android:text="账号："
             android:textSize="25dp"
-            android:paddingLeft="35dp"
+            android:paddingLeft="50dp"
             android:layout_below="@+id/image"
-            android:layout_marginTop="80dp" />
+            android:layout_marginTop="50dp" />
+
+        <TextView
+            android:id="@+id/T_account"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:text="123456789"
+            android:textSize="25dp"
+            android:layout_below="@+id/image"
+            android:layout_marginTop="50dp"
+            android:layout_toRightOf="@+id/account"/>
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
-            android:text="昵称：123"
+            android:text="昵称："
             android:textSize="25dp"
-            android:paddingLeft="35dp"
+            android:paddingLeft="50dp"
             android:layout_below="@+id/account"
-            android:layout_alignStart="@+id/account"/>
+            android:layout_alignLeft="@+id/account"/>
+
+        <TextView
+            android:id="@+id/T_name"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:text="迷雾"
+            android:textSize="25dp"
+            android:layout_below="@+id/account"
+            android:layout_toRightOf="@+id/name"/>
 
         <Button
             android:id="@+id/trans"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
             android:text="编辑资料"
             android:textSize="20sp"
+            android:background="@color/colorPrimary"
             android:layout_centerHorizontal="true"
-            android:layout_below="@id/name"/>
+            android:layout_below="@id/name"
+            android:layout_marginTop="70dp"/>
 
     </RelativeLayout>
 
