--- a/app/src/main/res/layout/view_meeting_brief_item.xml
+++ b/app/src/main/res/layout/view_meeting_brief_item.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main"
+
     app:layout_itemType="main"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="5dp"
     android:paddingBottom="5dp">
-    <com.stfalcon.multiimageview.MultiImageView
+    <ImageView
         android:id="@+id/meeting_brief_item_portrait"
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
         android:scaleType="centerCrop"
-        android:background="@drawable/vector_drawable__meeting_image_black"
+
 
         />
 
