--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,5 @@
   <color name="loading_backgroup">#2a80b9</color>
   <color name="loading_color">#ffffff</color>
   <color name="white">#ffffff</color>
-  <color name="black">#ffffff</color>
+  <color name="black">#000000</color>
 </resources>
