--- a/app/src/main/res/layout/activity_11.xml
+++ b/app/src/main/res/layout/activity_11.xml
@@ -15,15 +15,15 @@
         android:fitsSystemWindows="true"
         app:contentInsetStart="0dp">
 
-        <Button
-            android:id="@+id/B_before"
-            android:layout_width="30dp"
+        <ImageButton
+            android:id="@+id/mymeeting_back"
             android:layout_height="30dp"
-            android:drawableLeft="@drawable/vector_drawable_back"
-            android:background="@null"
-            android:textSize="20sp"
-            android:textColor="#FFFFFF"
-            android:gravity="center_vertical"/>
+            android:layout_width="30dp"
+            android:src="@drawable/vector_drawable_back"
+            android:background="@color/colorPrimary"
+            android:padding="0dp"
+            android:scaleType="fitXY"/>
+
         <TextView
             android:id="@+id/list"
             android:layout_height="wrap_content"
