--- a/app/src/main/res/layout/activity_01.xml
+++ b/app/src/main/res/layout/activity_01.xml
@@ -32,14 +32,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="false"
         android:layout_alignParentStart="false"
-        android:layout_below="@id/toolbar">
+        android:layout_below="@id/toolbar"
+        android:layout_marginTop="60dp">
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:scaleType="center"
-
             android:src="@drawable/touxiang"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="50dp" />
