--- a/app/src/main/res/layout/activity_09.xml
+++ b/app/src/main/res/layout/activity_09.xml
@@ -10,6 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -47,30 +49,33 @@
                 android:background="@color/colorPrimary"/>
         </android.support.v7.widget.Toolbar>
 
-
-
         <LinearLayout
             android:id="@+id/L1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="#FFFFFF"
             android:layout_marginTop="10dp"
+            android:background="#FFFFFF"
+            android:orientation="horizontal"
             android:paddingBottom="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
+                android:layout_marginTop="20dp"
                 android:text="封面"
-                android:textSize="20dp"
                 android:textColor="@color/black"
-                android:layout_marginTop="10dp"/>
+                android:textSize="20dp" />
 
             <ImageView
                 android:id="@+id/meetingimage"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content" />
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="180dp"
+                android:layout_marginTop="5dp"
+                android:src="@drawable/fengmian"/>
+
         </LinearLayout>
 
         <LinearLayout
