--- a/app/src/main/res/layout/activity_12.xml
+++ b/app/src/main/res/layout/activity_12.xml
@@ -54,11 +54,10 @@
             android:id="@+id/T_account"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
+            android:layout_alignTop="@+id/account"
+            android:layout_centerHorizontal="true"
             android:text="123456789"
-            android:textSize="25dp"
-            android:layout_below="@+id/image"
-            android:layout_marginTop="50dp"
-            android:layout_toRightOf="@+id/account"/>
+            android:textSize="25dp" />
 
         <TextView
             android:id="@+id/name"
