--- a/app/src/main/res/layout/activity_12.xml
+++ b/app/src/main/res/layout/activity_12.xml
@@ -44,7 +44,7 @@
             android:id="@+id/account"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
-            android:text="账号："
+            android:text="账号:"
             android:textSize="25dp"
             android:paddingLeft="50dp"
             android:layout_below="@+id/image"
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_alignTop="@+id/account"
-            android:layout_centerHorizontal="true"
+            android:layout_toEndOf="@+id/name"
             android:text="123456789"
             android:textSize="25dp" />
 
